BookStore/bookstore-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: bookstore
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
          name: mysql-port
        volumeMounts:
          - name: init-script
            mountPath: /docker-entrypoint-initdb.d/init.sql
            subPath: init.sql
          - name: data-mysql
            mountPath: /var/lib/mysql/

      volumes:
      - name: init-script
        configMap:
          name: bookstore-configmap
      - name: data-mysql
        persistentVolumeClaim:
          claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: mysql-port
